--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: objective-c
 xcode_project: CalculatorBrain/CalculatorBrain.xcodeproj 
 xcode_scheme: CalculatorBrainTests
+xcode_sdk: iphonesimulator8.1
